<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mvvm.dagger.coroutines.sample.login.LoginViewModel" />

        <variable
            name="etUtils"
            type="com.mvvm.dagger.coroutines.sample.utils.EditTextUtils" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mvvm.dagger.coroutines.sample.login.LoginActivity">

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextTheme"
            errorText="@{viewModel.emailError}"
            filters="@{etUtils.whiteSpaceFilters}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_padding"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextTheme"
            errorText="@{viewModel.passwordError}"
            filters="@{etUtils.whiteSpaceFilters}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_padding"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{safeUnbox(viewModel.isLoading) ?  View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_padding"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginEnd="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/login_button"
            android:theme="@style/ButtonAccentTheme"
            android:visibility="@{safeUnbox(viewModel.isLoading) ?  View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>